--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Eventually open-source!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node index.js"
   },
   "author": "Bobby Vasquez, Dean Cook, Shawn McMahon",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "pg": "^8.6.0"
   },
