Reformat package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Better Jeopardy API",
+  "name": "Better-Jeopardy-API",
   "version": "1.0.0",
   "description": "Eventually open-source!",
   "main": "index.js",
